refactor: 어드민 동아리 정보 조회 이미지 정보 추가